--- a/aseets/index.html
+++ b/aseets/index.html
@@ -5,8 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--  Aplicando Bootstrap -->
+    <script src="./css/bootstrap.min.css"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <!-- Finalizando Boostrap en head  -->
+
+
     <link rel="stylesheet" href="css/styles.css">
-    <title>Entregable</title>
+    <title>Victor Anantasi</title>
 </head>
 
 <body>
@@ -22,6 +30,8 @@
             </ul>
         </nav>
     </header>
+
+   
     <!-- fin del header -->
 
     <!-- inicio del main videos comentados para futuros cambios -->
@@ -35,8 +45,19 @@
     <!-- fin del main -->
 
     <!-- inicio del footer -->
-    <footer></footer>
+    <footer>
+        
+
+    </footer>
     <!-- fin del footer -->
+
+    <!-- inicio Boostrap body -->
+
+    <script src="./js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+     <!-- fin Boostrap body -->   
+
 </body>
 
 </html>
