--- a/aseets/pages/about.html
+++ b/aseets/pages/about.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--  Aplicando Bootstrap.min -->
+    <script src="../css/bootstrap.min.css"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <!-- Finalizando Boostrap.min  -->
+
+
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Entregable</title>
+    <title>Victor Anantasi</title>
 </head>
+
 <body>
-<!-- inicio del header -->
+    <!-- inicio del header -->
     <header>
         <a href="../index.html">By Victor Anastaci</a>
         <nav class="nav__links">
@@ -20,16 +30,24 @@
             </ul>
         </nav>
     </header>
-<!-- fin del header -->
+    <!-- fin del header -->
 
-<!-- inicio del main -->
-<main></main>
+    <!-- inicio del footer con boostrap -->
+    <footer>
+        <div class="container-fluid bg-light text-center p-3">
+            <p class="small"> &copy; 2022 Todos los derechos reservados / By Raineri Hernan / Argentina</p>  
+        </div>
+    </footer>
+    <!-- fin del footer con Boostrap -->
 
-<!-- fin del main -->
+    <!-- aplicando boostrap.bundle -->
 
-<!-- inicio del footer -->
-    <footer></footer>
-<!-- fin del footer -->
+    <script src="../js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <!-- fin Boostrap.bundle -->
+
+
 </body>
-</html>
 
+</html>
