--- a/aseets/pages/links.html
+++ b/aseets/pages/links.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Entregable</title>
+    <title>Victor Anantasi</title>
 </head>
+
 <body>
-<!-- inicio del header -->
+    <!-- inicio del header -->
     <header>
         <a href="../index.html">By Victor Anastaci</a>
         <nav class="nav__links">
@@ -20,18 +22,24 @@
             </ul>
         </nav>
     </header>
-<!-- fin del header -->
+    <!-- fin del header -->
 
-<!-- inicio del main -->
+    <!-- inicio del main -->
     <main>
-        <h1>Aca van a ir los links</h1>
+
     </main>
-<!-- fin del main -->
+    <!-- fin del main -->
 
-<!-- inicio del footer -->
+    <!-- inicio del footer con boostrap -->
     <footer>
-
+        <div class="container-fluid bg-light text-center p-3">
+            <p class="small"> &copy; 2022 Todos los derechos reservados / By Raineri Hernan /  Argentina</p>
+            <p class="small"> Se colocaran los iconos de las redes sociales</p>
+        </div>
     </footer>
-<!-- fin del footer -->
+    <!-- fin del footer con boostrap -->
+
+    
 </body>
+
 </html>
