dos paginas terminadas

--- a/aseets/index.html
+++ b/aseets/index.html
@@ -46,8 +46,9 @@
 
     <!-- inicio del footer -->
     <footer>
-        
-
+        <div class="foot">
+            <p> &copy; 2022 Todos los derechos reservados / By Raineri Hernan /  Argentina</p>
+        </div>
     </footer>
     <!-- fin del footer -->
 
