--- a/aseets/pages/about.html
+++ b/aseets/pages/about.html
@@ -32,10 +32,17 @@
     </header>
     <!-- fin del header -->
 
+
+    <main>
+            
+        <img src="../img/about.jpeg" alt="photo">
+
+    </main>
+
     <!-- inicio del footer con boostrap -->
     <footer>
-        <div class="container-fluid bg-light text-center p-3">
-            <p class="small"> &copy; 2022 Todos los derechos reservados / By Raineri Hernan / Argentina</p>  
+        <div class="foot">
+            <p> &copy; 2022 Todos los derechos reservados / By Raineri Hernan / Argentina</p>  
         </div>
     </footer>
     <!-- fin del footer con Boostrap -->
