--- a/aseets/pages/links.html
+++ b/aseets/pages/links.html
@@ -32,9 +32,8 @@
 
     <!-- inicio del footer con boostrap -->
     <footer>
-        <div class="container-fluid bg-light text-center p-3">
-            <p class="small"> &copy; 2022 Todos los derechos reservados / By Raineri Hernan /  Argentina</p>
-            <p class="small"> Se colocaran los iconos de las redes sociales</p>
+        <div class="foot">
+            <p> &copy; 2022 Todos los derechos reservados / By Raineri Hernan /  Argentina</p>
         </div>
     </footer>
     <!-- fin del footer con boostrap -->
