--- a/aseets/pages/product.html
+++ b/aseets/pages/product.html
@@ -71,7 +71,12 @@
     <!-- fin del main  -->
 
     <!-- inicio del footer -->
-    <footer></footer>
+    <footer>
+        <div class="foot">
+            <p> &copy; 2022 Todos los derechos reservados / By Raineri Hernan /  Argentina</p>
+        </div>
+
+    </footer>
     <!-- fin del footer -->
 </body>
 </html>
