--- a/aseets/index.html
+++ b/aseets/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!--  Aplicando Bootstrap -->
     <script src="./css/bootstrap.min.css"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <!-- Finalizando Boostrap en head  -->
 
-
+    <meta name="keywords" content="perfume,"> 
+    <meta name="description" content="pagina ventas de perfume"> 
     <link rel="stylesheet" href="css/styles.css">
     <title>Victor Anantasi</title>
 </head>
@@ -31,23 +31,22 @@
         </nav>
     </header>
 
-   
+
     <!-- fin del header -->
 
     <!-- inicio del main videos comentados para futuros cambios -->
     <main>
         <video loop muted autoplay class="vic__video">
-            <source src="./img/Green.mp4" type="video/mp4">
-            <!-- <source src="./img/videos.mp4" type="video/mp4"> -->
-            <!-- <source src="./../aseets/img/bg-video.mp4" type="video/mp4"> -->
-        </video>   
+            <!-- <source src="./img/Green.mp4" type="video/mp4"> -->
+            <source src="./img/video dos.mp4" type="video/mp4">
+        </video>
     </main>
     <!-- fin del main -->
 
     <!-- inicio del footer -->
     <footer>
         <div class="foot">
-            <p> &copy; 2022 Todos los derechos reservados / By Raineri Hernan /  Argentina</p>
+            <p> &copy; 2022 Todos los derechos reservados / By Raineri Hernan / Argentina</p>
         </div>
     </footer>
     <!-- fin del footer -->
@@ -57,7 +56,7 @@
     <script src="./js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-     <!-- fin Boostrap body -->   
+    <!-- fin Boostrap body -->
 
 </body>
 
