--- a/aseets/pages/about.html
+++ b/aseets/pages/about.html
@@ -12,6 +12,10 @@
         crossorigin="anonymous"></script>
     <!-- Finalizando Boostrap.min  -->
 
+     <!-- SEO -->
+     <meta name="keywords" content="victor anastasi, aroma fragancia"> 
+     <meta name="description" content="historia de creacions victor Anastasi"> 
+
 
     <link rel="stylesheet" href="../css/styles.css">
     <title>Victor Anantasi</title>
@@ -35,7 +39,7 @@
 
     <main>
             
-        <img src="../img/about.jpeg" alt="photo">
+        <img src="../img/about.jpeg" alt="photo Victor Anantasi">
 
     </main>
 
