--- a/aseets/pages/home.html
+++ b/aseets/pages/home.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <!-- SEO -->
+     <meta name="keywords" content="esencia,fragencia,locion"> 
+     <meta name="description" content=" precentacion de los prefumes de temporada"> 
+
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Entregable</title>
+    <title>Victor Anantasi</title>
 </head>
 <body>
 
