--- a/aseets/pages/links.html
+++ b/aseets/pages/links.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- SEO -->
+      <meta name="keywords" content="redes sociales, precentacion de productos"> 
+      <meta name="description" content="pagina ventas de perfume"> 
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Victor Anantasi</title>
 </head>
@@ -21,24 +26,66 @@
                 <li><a href="./about.html">About</a></li>
             </ul>
         </nav>
+
     </header>
     <!-- fin del header -->
 
-    <!-- inicio del main -->
-    <main>
+    <section id="kittens">
 
-    </main>
-    <!-- fin del main -->
+        <div class="card" style="width: 18rem;">
+            <img src="../img/corona Denis.jpg" class="card-img-top" alt="Corona negra">
+            <div class="card-body">
+                <h5 class="card-title letraMediana">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="btn boton">Go somewhere</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="../img/corona Denis.jpg" class="card-img-top" alt="Corona negra">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text letraChica">Some quick example text to build on the card title and make up the bulk
+                    of the
+                    card's content.</p>
+                <a href="#" class="btn botonRojo">Go somewhere</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="../img/corona Denis.jpg" class="card-img-top" alt="Corona negra">
+            <div class="card-body">
+                <h5 class="card-title letraMediana">Card title</h5>
+                <p class="card-text letraChica">Some quick example text to build on the card title and make up the bulk
+                    of the
+                    card's content.</p>
+                <a href="#" class="btn botonVerde">Go somewhere</a>
+            </div>
+        </div>
+
+        <!-- links -->
+
+        <div class="footerLinks">
+
+            <i class="fa-brands fa-linkedin botonLinkedin"></i>
+            <i class="fa-brands fa-facebook botonFacebook"></i>
+            <i class="fa-brands fa-instagram botonInstagram"></i>
+        </div>
+
+    </section>
 
     <!-- inicio del footer con boostrap -->
     <footer>
         <div class="foot">
-            <p> &copy; 2022 Todos los derechos reservados / By Raineri Hernan /  Argentina</p>
+
+
+            <p> &copy; 2022 Todos los derechos reservados / By Raineri Hernan / Argentina</p>
         </div>
     </footer>
     <!-- fin del footer con boostrap -->
 
-    
+
 </body>
 
 </html>
