--- a/aseets/index.html
+++ b/aseets/index.html
@@ -11,6 +11,7 @@
         crossorigin="anonymous"></script>
     <!-- Finalizando Boostrap en head  -->
 
+    <!-- SEO -->
     <meta name="keywords" content="perfume,"> 
     <meta name="description" content="pagina ventas de perfume"> 
     <link rel="stylesheet" href="css/styles.css">
