--- a/aseets/pages/about.html
+++ b/aseets/pages/about.html
@@ -12,9 +12,9 @@
         crossorigin="anonymous"></script>
     <!-- Finalizando Boostrap.min  -->
 
-     <!-- SEO -->
-     <meta name="keywords" content="victor anastasi, aroma fragancia"> 
-     <meta name="description" content="historia de creacions victor Anastasi"> 
+    <!-- SEO -->
+    <meta name="keywords" content="victor anastasi, aroma fragancia">
+    <meta name="description" content="historia de creacions victor Anastasi">
 
 
     <link rel="stylesheet" href="../css/styles.css">
@@ -37,16 +37,35 @@
     <!-- fin del header -->
 
 
-    <main>
-            
-        <img src="../img/about.jpeg" alt="photo Victor Anantasi">
+    <!-- <section class="about">
+        <div class="aboutdos">
+            <img src="../img/about.jpeg" alt="Victor">
+        </div>
+    </section> -->
 
-    </main>
+    <div class="section">
+        <div class="container">
+            <div class=" container-section">
+                <div class="title">
+                    <h1>About Us</h1>
+                </div>
+                <div class="contain">
+                    <h3></h3>
+                    <p> En 2014 inspirado por la moda el fotografo Victor Anastasi se sumerge en la industria del perfume creando By Victor Anastasi. Contando con proveedores internacioanles de blens y fragancias absolutas junto a perfumistas independientes Victor Anastasi da visa a By Victor Anastasi saliendo al mercado. En 2014 con su primer linea Domani Lui y Domani Lei encontraron inspiracion en el hombre y la mujer urbana con fragancias de caracter solidas y de duso diario</p>
+                </div>
+            </div>
+            <div class="image-section">
+                <img src="../img/corona Denis.jpg" alt="Foto marca del productos">
+
+            </div>
+        </div>
+    </div>
+
 
     <!-- inicio del footer con boostrap -->
     <footer>
         <div class="foot">
-            <p> &copy; 2022 Todos los derechos reservados / By Raineri Hernan / Argentina</p>  
+            <p> &copy; 2022 Todos los derechos reservados / By Raineri Hernan / Argentina</p>
         </div>
     </footer>
     <!-- fin del footer con Boostrap -->
