--- a/aseets/pages/links.html
+++ b/aseets/pages/links.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- SEO -->
-      <meta name="keywords" content="redes sociales, precentacion de productos"> 
-      <meta name="description" content="pagina ventas de perfume"> 
+    <!-- SEO -->
+    <meta name="keywords" content="redes sociales, precentacion de productos">
+    <meta name="description" content="pagina ventas de perfume">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
@@ -30,7 +30,7 @@
     </header>
     <!-- fin del header -->
 
-    <section id="kittens">
+    <!--  <section id="kittens">
 
         <div class="card" style="width: 18rem;">
             <img src="../img/corona Denis.jpg" class="card-img-top" alt="Corona negra">
@@ -62,24 +62,31 @@
                     card's content.</p>
                 <a href="#" class="btn botonVerde">Go somewhere</a>
             </div>
-        </div>
+        </div> -->
 
-        <!-- links -->
+    <!-- links -->
 
-        <div class="footerLinks">
+    <div class="footerLinks">
 
-            <i class="fa-brands fa-linkedin botonLinkedin"></i>
-            <i class="fa-brands fa-facebook botonFacebook"></i>
+
+
+        <!-- <i class="fa-brands fa-linkedin botonLinkedin"></i> -->
+        <a href="https://www.instagram.com/by_victor_anastasi/">
             <i class="fa-brands fa-instagram botonInstagram"></i>
-        </div>
+        </a>
+
+        <a href="https://www.facebook.com/Va.producciones.fotograficas">
+
+            <i class="fa-brands fa-facebook botonFacebook"> </i>
+        </a>
+
+    </div>
 
     </section>
 
     <!-- inicio del footer con boostrap -->
     <footer>
         <div class="foot">
-
-
             <p> &copy; 2022 Todos los derechos reservados / By Raineri Hernan / Argentina</p>
         </div>
     </footer>
